Fixed alerts on mobile devices

--- a/src/Styles/Alert.css
+++ b/src/Styles/Alert.css
@@ -4,6 +4,7 @@
     background: var(--bgColor);
     border-radius: 5px;
     box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px, rgba(15, 15, 15, 0.2) 0px 5px 10px, rgba(15, 15, 15, 0.4) 0px 15px 40px;
+    color: var(--primaryFontColor);
     display: flex;
     line-height: 1.5;
     min-width: 250px;
@@ -29,6 +30,7 @@
 }
 @media (max-width: 768px){
    .Alert{
-        right: auto;
+        right: 20px;
+        top: 20px;
     } 
 }
